--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <h1>Ana Beatriz Delfino dos Santos</h1>
         <p class="contato">
-            <a href="mailto:ana.beatriz@gmail.com">ana.beatriz@gmail.com</a> | 
+            <a href="mailto:ana.beatriz.delf@gmail.com">ana.beatriz@gmail.com</a> | 
             <a href="tel:+5583993111958">(83) 99311-1958</a> | 
             Cajazeiras, PB
         </p>
